# orcanet-rust

./: .env  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  compose.yml
.github/workflows/: cli.yml  fmt.yml  market.yml  peernode.yml
.github/workflows/fmt/: action.yml
cli/: Cargo.toml
cli/src/: client.rs  lib.rs
docker/market/: Dockerfile
docker/peernode/: Dockerfile
docker/producer/: Dockerfile
docs/notes/: code_doc.md  code_doc.txt
examples/: spawn.rs
examples/market_proto/: Cargo.toml  build.rs
examples/market_server/: Cargo.toml  cli.rs  main.rs  market_service.rs
examples/market_server/src/: cli.rs  lib.rs
examples/market_test_client/: Cargo.toml  cli.rs  main.rs
market/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
market/examples/: sample.rs
market/examples/market_server/: cli.rs  main.rs
market/src/: behaviour.rs  config.rs  lib.rs  lmm.rs
market/src/bridge/: coordinator.rs  mod.rs  peer.rs
market/src/command/: mod.rs  request.rs  response.rs
market/src/handler/: dcutr.rs  identify.rs  kad.rs  mod.rs  ping.rs  req_res.rs
market/src/handler/relay/: client.rs
market/tests/: test_check_holders.rs  test_register_file.rs
market_dht/: Cargo.toml
market_dht/examples/: sample_client.rs  spawn.rs
market_dht/src/: behaviour.rs  boot_nodes.rs  channel.rs  command.rs  config.rs  coordinator.rs  file.rs  lib.rs  lmm.rs  message.rs  net.rs  peer.rs  req_res.rs  request.rs
market_dht/src/behaviour/: autonat.rs  file_req_res.rs  ident.rs  kademlia.rs
market_dht/src/bridge/: coordinator.rs  dht_client.rs  dht_server.rs  mod.rs  peer.rs
market_dht/src/command/: mod.rs  request.rs  response.rs
market_dht/src/handler/: autonat.rs  bootup.rs  kad.rs  mod.rs  relay_client.rs  relay_server.rs
market_dht/tests/: basic_request_data.rs
market_proto/: build.rs
market_proto/src/: lib.rs
market_server/: Cargo.toml
market_server/src/: cli.rs  lib.rs  main.rs  market_service.rs
market_test_client/: Cargo.toml
market_test_client/src/: actor.rs  cli.rs  lib.rs  main.rs  util.rs
old/.github/workflows/: market.yml  peernode.yml
old/peernode/src/peer-node/: client.rs
old/peernode/src/peer-node/cli/: tests.rs
old/peernode/src/peer-node/consumer/: http.rs
old/peernode/src/peer-node/store/: mod.rs
peernode/: .gitignore  Cargo.toml  build.rs  compose.yml
peernode/src/: lib.rs
peernode/src/cli/: mod.rs
peernode/src/consumer/: mod.rs
peernode/src/peer/: mod.rs
peernode/src/peer-node/: client.rs  server.rs
peernode/src/peer-node/cli/: mod.rs  tests.rs
peernode/src/peer-node/consumer/: encode.rs  http.rs  mod.rs
peernode/src/peer-node/grpc/: mod.rs
peernode/src/peer-node/peer/: mod.rs
peernode/src/peer-node/producer/: files.rs  http.rs  jobs.rs  mod.rs  test.rs
peernode/src/peer-node/routes/: file_routes.rs  job_routes.rs
peernode/src/peer-node/routes/bubble_guppies/: history.rs  jobs.rs  market.rs  mod.rs  settings.rs
peernode/src/peer-node/routes/manta/: mining.rs  mod.rs  stats.rs  wallet.rs
peernode/src/peer-node/routes/sea_pig/: home.rs  mod.rs  peer.rs
peernode/src/peer-node/store/: mod.rs
peernode/src/peer-node/transfer/: files.rs  jobs.rs  mod.rs
peernode/src/producer/: db.rs  http.rs  mod.rs
peernode/src/routes/bubble_guppies/: jobs.rs
peernode/src/store/: mod.rs
proto/: Cargo.toml  build.rs  market.proto  orcanet.proto
proto/src/: lib.rs
server/: Cargo.toml  README.md  SERVER.MD
server/src/: jobs.rs  server.rs
server/src/routes/bubble_guppies/: jobs.rs  mod.rs
server/src/routes/manta/: mod.rs
server/src/routes/sea_pig/: home.rs  peer.rs
src/: behaviour.rs  lib.rs  main.rs
src/bridge/: coordinator.rs
src/command/: request.rs
src/handler/: autonat.rs  kad.rs  req_res.rs
src/handler/relay/: mod.rs  server.rs
src/market/: server.rs
src/peer-node/: client.rs
src/peer-node/consumer/: encode.rs  http.rs  mod.rs
src/peer-node/grpc/: mod.rs
src/peer-node/producer/: db.rs  error.rs  files.rs  http.rs  mod.rs
src/peer-node/store/: mod.rs
