[package]
name = "cse416-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the gRPC server
name = "market-server"
path = "src/market/server.rs"

[[bin]] # Bin to run the gRPC client
name = "peer-node"
path = "src/peer-node/client.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio-util = "0.7.10"
anyhow = "1.0.80"
reqwest = "0.11.24"

[build-dependencies]
tonic-build = "0.11"
