[package]
name = "orcanet-market-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81" }
libp2p = { version = "0.53.2", features = [
  "cbor",
  "dns",
  "kad",
  "noise",
  "tls",
  "tokio",
  "mdns",
  "relay",
  "dcutr",
  "autonat",
  "tcp",
  "quic",
  "ed25519",
  "yamux",
  "identify",
  "macros",
  "request-response",
  "ping",
] }
futures = { version = "0.3.30" }
thiserror = { version = "1.0.58" }
log = { version = "0.4.21" }
tokio = { version = "1.36.0", features = [
  "rt-multi-thread",
  "sync",
  "macros",
  "time",
] }
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
tokio-test = { version = "0.4.4" }
tracing-log = "0.2.0"

market_proto = { path = "./examples/market_server/market_proto" }
tonic = { version = "0.11.0" }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = { version = "1.0.81" }
clap = { version = "4.5.3", features = ["derive"] }
libp2p = { version = "0.53.2" }
tonic-build = "0.11.0"
prost = "0.12.3"
strum = { version = "0.26.2" }
strum_macros = { version = "0.26.2" }
rustyline = { version = "14.0.0" }
