[package]
name = "market_dht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
anyhow = { version = "1.0.81" }
libp2p = { version = "0.53.2", features = [
  "dns",
  "kad",
  "noise",
  "tokio",
  "mdns",
  "tcp",
  "quic",
  "ed25519",
  "yamux",
] }
futures = { version = "0.3.30" }
thiserror = { version = "1.0.58" }

[dev-dependencies]
pretty_assertions = "1.4.0"
