[package]
name = "market_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
market_proto = { path = "../market_proto" }
tonic = { version = "0.11.0" }
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
pretty_assertions = { version = "1.4.0" }
