[package]
name = "peernode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test_local_market = []

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "fs",
] }
rand = "0.8.5"
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio-util = "0.7.10"
anyhow = "1.0.80"
reqwest = { version = "0.12.2", features = ["json"] }
glob = "0.3.1"
sha2 = "0.10.8"
mime_guess = "2.0.4"
uuid = { version = "1.8.0", features = ["v4"] }
config = "0.14.0"
serde_json = "1.0.115"
base64 = "0.22.0"
orcanet-market = { path = "../market" }
proto = { path = "../proto"}
async-recursion = "1.1.1"

[build-dependencies]
tonic-build = "0.11"
serde = { version = "1.0.197", features = ["derive"] }
