[package]
name = "market_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
market_proto = { path = "../market_proto" }
tonic = { version = "0.11.0" }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = { version = "1.0.81" }
clap = { version = "4.5.3", features = ["derive"] }
market_dht = { path = "../market_dht" }
libp2p = { version = "0.53.2" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
tracing-log = { version = "0.2.0" }

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
pretty_assertions = { version = "1.4.0" }
